# TrayIconSdk

./: .gitignore  CMakeLists.txt  README.md
impl/: SystemTraySDK.cpp
include/codeproject/ui/tray_icon/: SystemTraySDK.h
